@@ -57,6 +57,14 @@ New Keywords:
 - add_input_float2:	  Added "enabled" keyword
 - add_input_float3:	  Added "enabled" keyword
 - add_input_float4:	  Added "enabled" keyword
+- add_slider_int:	  Added "enabled" keyword
+- add_slider_int2:	  Added "enabled" keyword
+- add_slider_int3:	  Added "enabled" keyword
+- add_slider_int4:	  Added "enabled" keyword
+- add_slider_float:	  Added "enabled" keyword
+- add_slider_float2:  Added "enabled" keyword
+- add_slider_float3:  Added "enabled" keyword
+- add_slider_float4:  Added "enabled" keyword
 
 Changes:
 - show_metrics:       Moved to simple module
